log-output/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: log-output-svc
  namespace: exercises

spec:
  selector:
    app: log-output

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
